<resources>
    <string name="app_name">Matchmefy</string>
    <string name="appName">Matchmefy</string>
    <string name="sign_in_with_spotify">Sign In with Spotify</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_paragraph">In order to user our App, you must Sign In \n with your Spotify account</string>
    <string name="welcomeTitle">Welcome</string>
    <string name="continueText">continue</string>
    <string name="search_for_a_user_hint">Search for a user</string>
    <string name="no_users_found">No users found (｡•́︿•̀｡)</string>
    <string name="no_matches_found">No matches found (｡•́︿•̀｡)\nStart looking in the Search tab</string>
    <string name="match_with">Match with</string>
    <string name="match">match</string>
    <string name="loading_some_data">Loading some data</string>

    <!-- Welcome Fragments -->
    <string name="on_boarding_title_1">Search &amp; Match</string>
    <string name="on_boarding_description_1">Search and match users to see\nyour match score and more\nMatches can only be seen by you</string>

    <string name="on_boarding_title_2">Match randomly</string>
    <string name="on_boarding_description_2">Match with random users and\nfind your possible songmate</string>

    <string name="on_boarding_title_3">Create playlists</string>
    <string name="on_boarding_description_3">Create Spotify playlists from your\nmatches and discover new music</string>

    <!-- Match Result Score Fragment    -->
    <string name="match_score_0_title">Pass</string>
    <string name="match_score_20_title">Meh</string>
    <string name="match_score_40_title">Not Bad!</string>
    <string name="match_score_60_title">Good!</string>
    <string name="match_score_80_title">Amazing!</string>

    <string name="match_score_subtitle">You have a %1$.2f%% match score</string>
    <string name="common_artists_title">You both listen to:</string>
    <string name="common_tracks_title">You love these songs:</string>
    <string name="common_genres_title">You both love these genres:</string>
    <string name="create_playlist_title">Create a playlist</string>
    <string name="create_playlist_description">Get a tailored Spotify playlist with amazing songs to discover what kind of music %1$s likes</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_user_data">Delete User Data</string>
    <string name="sign_out">Sign Out</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="not_now">Not Now</string>

    <!-- Dialogs -->
    <string name="cancel_dialog_button">Cancel</string>
    <string name="create_dialog_button">Create</string>
    <string name="open_dialog_button">Open</string>
    <string name="later_dialog_button">Later</string>
    <string name="match_dialog_button">Match</string>

    <string name="random_match_dialog_title">Match a random user?</string>
    <string name="random_match_dialog_description">Match with a random user\nMatches can only be seen by you</string>

    <string name="create_playlist_dialog_title">Create Playlist?</string>
    <string name="create_playlist_dialog_description">This action will create a new Spotify playlist for your account. You can delete it in Spotify at any time</string>

    <string name="create_playlist_dialog_error_title">Ops</string>
    <string name="create_playlist_dialog_error_description">We cannot create a playlist with yourself \n \n ¯\\_(ツ)_/¯</string>

    <string name="playlist_created_dialog_title">Playlist Created</string>
    <string name="playlist_created_dialog_description">Your playlist has been created!\nYou can open it in Spotify</string>

    <string name="sign_out_dialog_title">Sign Out</string>
    <string name="sign_out_dialog_description">Are you sure you want to leave the app?\nThis will not sign you out from Spotify</string>
    <string name="sign_out_dialog_button">Sign Out</string>

    <string name="delete_data_dialog_title">Delete your data?</string>
    <string name="delete_data_dialog_description">We will delete all your data\nThis action will also sign you out the app</string>
    <string name="delete_data_dialog_button">Delete</string>

    <string name="no_internet_connection_dialog_title">No Internet Connection</string>
    <string name="no_internet_connection_dialog_description">No Internet connection found\nPlease check your connection</string>

    <string name="unauthorized_dialog_title">Your session expired</string>
    <string name="unauthorized_dialog_description">Looks like your session expired\nYou\'ll be redirected to the login page</string>

    <string name="error_dialog_title">An error occurred</string>
    <string name="error_dialog_description">An error occurred\nPlease try again later</string>
    <string name="error_dialog_button">OK</string>

    <string name="terms_and_privacy_dialog_title">Terms and Privacy</string>
    <string name="terms_and_privacy_dialog_description">Before you start using our app we\nmust ask you to agree to the following:</string>
    <string name="terms_and_privacy_dialog_positive_button">Accept</string>

    <string name="create">create</string>
    <string name="search_for_a_match">Search for a match</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="about">About</string>
    <string name="non_commercial_app_created_by">Non-commercial app created by:</string>
    <string name="terms_and_conditions">Terms and Conditions</string>


</resources>
